[8] Setting weekly availability validation fix